[gd_scene load_steps=16 format=3 uid="uid://bhc1flkqys1ud"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_wxukp"]
[ext_resource type="Resource" uid="uid://dkanpf5k76w42" path="res://scripts/player_data.tres" id="3_ydqhr"]
[ext_resource type="Texture2D" uid="uid://dqvurj4wsjjdk" path="res://sprites/tom1.png" id="3_ywf58"]
[ext_resource type="Texture2D" uid="uid://dqk31klx8al7i" path="res://sprites/tom2.png" id="4_6i34q"]
[ext_resource type="Texture2D" uid="uid://cfmctq1b3ur75" path="res://sprites/tom3.png" id="5_btoup"]
[ext_resource type="Theme" uid="uid://xp6h1nwsksj4" path="res://hud.tres" id="6_wj6ls"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m0ems"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ywf58")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ywf58")
}, {
"duration": 1.0,
"texture": ExtResource("4_6i34q")
}, {
"duration": 1.0,
"texture": ExtResource("5_btoup")
}],
"loop": true,
"name": &"walking",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gddsf"]
size = Vector2(14, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pt5mv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogevn"]
bg_color = Color(0.258824, 0.713726, 0, 1)

[sub_resource type="Animation" id="Animation_dumxd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerAnimation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fsnbt"]
resource_name = "take_damage"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerAnimation:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1r8jd"]
_data = {
"RESET": SubResource("Animation_dumxd"),
"take_damage": SubResource("Animation_fsnbt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1rfl"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68k7f"]
size = Vector2(14, 30)

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_wxukp")
SPEED = 100.0
stats = ExtResource("3_ydqhr")

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_m0ems")
animation = &"walking"
frame = 2
frame_progress = 0.863268

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_gddsf")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -7.0
offset_top = -18.0
offset_right = 7.0
offset_bottom = -16.0
theme = ExtResource("6_wj6ls")
theme_override_styles/background = SubResource("StyleBoxFlat_pt5mv")
theme_override_styles/fill = SubResource("StyleBoxFlat_ogevn")
max_value = 10.0
value = 10.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../HealthBar")
libraries = {
"": SubResource("AnimationLibrary_1r8jd")
}

[node name="ProjectileSpawnTop" type="Node2D" parent="."]
position = Vector2(0, -10)

[node name="ProjectileSpawnRight" type="Node2D" parent="."]
position = Vector2(7, 0)

[node name="ProjectileSpawnTopRight" type="Node2D" parent="."]
position = Vector2(7, -10)

[node name="ProjectileSpawnTopLeft" type="Node2D" parent="."]
position = Vector2(-7, -10)

[node name="ProjectileSpawnBotRight" type="Node2D" parent="."]
position = Vector2(7, 10)

[node name="ProjectileSpawnBotLeft" type="Node2D" parent="."]
position = Vector2(-7, 10)

[node name="ProjectileSpawnLeft" type="Node2D" parent="."]
position = Vector2(-7, 0)

[node name="ProjectileSpawnBot" type="Node2D" parent="."]
position = Vector2(0, 10)

[node name="ActionableFinder" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionableFinder"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_e1rfl")

[node name="PickupDetector" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupDetector"]
shape = SubResource("RectangleShape2D_68k7f")
